--- a/styles.css
+++ b/styles.css
@@ -73,14 +73,46 @@ h1 {
 #wrapper > main {
   grid-area: main;
   min-height: calc(100vh - 70px);
-  margin-top: 80px;
+  margin-top: 65px;
   padding-top: 10px;
 }
 
-.hero h1 {
-
-  text-align: center;
+.välkommen h2 {
   color: #f8f5e6;
+  font-size: 70px;
+  padding-top: 110px;
+  margin: 0 0 0 20px;
+  font-family: 'Corinthia', cursive;
+  
+}
+
+.välkommen {
+  box-shadow: 0px 1px 5px #333333;
+  background-color: rgba(255,255,255, 0.4);
+  width: 1000px;
+  height: 350px;
+  margin: auto;
+  border-radius: 5px;
+}
+
+.välkommen p {
+  color: #f8f5e6;
+  margin: 10px 0 0 20px;
+  font-family: 'Corinthia', cursive;
+  font-size: 30px;
+
+}
+
+.välkommen button {
+  color: #f8f5e6;
+  background-color: #666;
+  text-decoration: none;
+  text-align: center;
+  margin: 30px 0 0 20px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+
 }
 
 #wrapper > footer {
