--- a/styles.css
+++ b/styles.css
@@ -107,11 +107,18 @@ h1 {
   color: #f8f5e6;
   background-color: #666;
   text-decoration: none;
-  text-align: center;
+  align-items: center;
   margin: 30px 0 0 20px;
   border: none;
   border-radius: 5px;
   padding: 10px;
+
+}
+
+.välkommen button:hover {
+  background-color: #ddd;
+  color: black;
+  border-radius: 10px;
 
 }
 
