--- a/styles.css
+++ b/styles.css
@@ -107,11 +107,13 @@ h1 {
   color: #f8f5e6;
   background-color: #666;
   text-decoration: none;
-  align-items: center;
+  text-align: center;
   margin: 30px 0 0 20px;
   border: none;
   border-radius: 5px;
   padding: 10px;
+  cursor: pointer;
+  display: inline-block;
 
 }
 
