--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ h1 {
 .kontakt-form > form input, select, textarea {
   width: 80%;
   padding: 10px;
-  border: 1px solid rgb(38 143 255 / 50%);
+  border: 1px solid rgb(38 143 255);
   border-radius: 5px;
   resize: vertical;
   margin: 6px 0 10px 20px;
