--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ h1 {
   margin: 10px auto;
 }
 
-.info-ruta h5 {
+.info-ruta h5, .searchunicorn-form h5 {
   font-size: 20px;
   text-decoration: none;
   margin: 20px;
@@ -244,6 +244,39 @@ h1 {
 }
 
 .kontakt-form > form input[type=submit]:hover {
+  background-color: rgb(38 143 255 / 50%);
+  color: #333333;
+}
+
+.searchunicorn-form {
+  background-color: rgba(255,255,255, 0.4);
+  width: 800px;
+  min-height: 400px;
+  border-radius: 5px;
+  border: 1px solid rgb(38 143 255);
+  margin: 10px auto;
+
+}
+
+.searchunicorn-form > form {
+  display: grid;
+  
+}
+
+.searchunicorn-form label {
+  margin-left: 20px;
+}
+
+.searchunicorn-form > form input {
+  width: 20%;
+  padding: 10px;
+  border: 1px solid rgb(38 143 255);
+  border-radius: 5px;
+  margin: 6px 0 10px 20px;
+  
+}
+
+.searchunicorn-form > form input:hover {
   background-color: rgb(38 143 255 / 50%);
   color: #333333;
 }
