--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,39 @@ h1 {
   color: #333333;
 }
 
+.spotted-unicorn {
+  width: 990px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: aliceblue;
+}
+
+#spotted-unicorn-header {
+  width: 990px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: rgba(255,255,255, 0.4);
+}
+
+#spotted-unicorn-header h3 {
+  color: #f8f5e6;
+  font-size: 25px;
+  padding: 10px 0 5px 10px;
+  margin: 0;
+}
+
+#spotted-unicorn-header h4 {
+  color: #f8f5e6;
+  font-size: 18px;
+  padding: 5px 0 10px 12px;
+  margin: 0;
+}
+
 
 
 #wrapper > footer {
