inläg + load more btn
inläg, load more btn, plats & admin

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ h1 {
 .välkommen h2 {
   color: #f8f5e6;
   font-size: 70px;
-  padding-top: 110px;
+  padding-top: 60px;
   margin: 0 0 0 20px;
   font-family: 'Corinthia', cursive;
   
@@ -135,6 +135,12 @@ h1 {
   cursor: pointer;
   margin: 5px;
   float: left;
+  display: none;
+}
+
+#wrapper .unicorn .unicorn-inläg:nth-child(1),
+#wrapper .unicorn .unicorn-inläg:nth-child(2){
+  display:inline;
 }
 
 
@@ -145,14 +151,32 @@ h1 {
   display: block;
   float: right;
   padding: 2px ;
-  
-  
 }
 
 .unicorn-inläg > .unicorn-heading {
   margin: 5px;
   padding: 5px;
   text-decoration: none;
+}
+
+.unicorn-inläg > .icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px;
+  padding-top: 10px;
+  border-top: 1px solid rgb(38 143 255);
+  
+}
+
+.unicorn-inläg > .icons span {
+  font-size: 12px;
+  color: #777;
+}
+
+.unicorn-inläg > .icons span i{
+  color: rgb(38 143 255);
+  padding-right: px;
 }
 
 .unicorn-inläg > .unicorn-heading h3, .unicorn-inläg > .unicorn-description p{
@@ -170,6 +194,23 @@ h1 {
   padding: 5px;
   text-decoration: none;
   font-size: 12px;
+}
+
+#load-more{
+  margin-top: 10px;
+  display:inline-block;
+  padding: 13px 30px;
+  border: 1px solid #334;
+  color: #334;
+  font-size: 16px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+#load-more:hover{
+  background-color: rgb(38 143 255);
+  border-color: #333333;
+  color: #f8f5e6;
 }
 
 .info-ruta {
