--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ h3 {
 .unicorn-inläg > .unicorn-picture {
   margin: 3px;
   overflow: hidden;
-  width: 250px;
+  width: 260px;
   height: 190px;
   border-radius: 5px;
   display: block;
@@ -321,6 +321,7 @@ h3 {
 
 .searchunicorn-form label {
   margin-left: 20px;
+  font-size: 13px;
 }
 
 .searchunicorn-form > form input, textarea, select {
@@ -379,4 +380,51 @@ h3 {
   text-transform: none;
   font-size: 14px;
   font-family: 'Exo 2', sans-serif;
+}
+
+@media(max-width:480px){
+  #wrapper {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer"
+        ;
+}
+
+h2 {
+  color: #f8f5e6;
+  font-size: 35px;
+  padding-top: 60px;
+  margin: 0 0 0 20px;
+  font-family: 'Corinthia', cursive;
+  
+}
+
+
+.topnav a {
+  display: none;
+}
+
+.välkommen {
+  height: 200px;
+}
+
+.välkommen p {
+  color: #f8f5e6;
+  margin: 10px 0 0 20px;
+  font-family: 'Corinthia', cursive;
+  font-size: 16px;
+
+}
+
+.välkommen button {
+  margin: 30px;
+  padding: 10px;
+
+
+}
+
+
 }
