--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ h3 {
   
 }
 
-.searchunicorn-form > form input[type=submit]:hover {
+.searchunicorn-form > form input[type=button]:hover {
   background-color: rgb(38 143 255 / 50%);
   color: #f8f5e6;
 }
