--- a/Main/styles.css
+++ b/Main/styles.css
@@ -99,6 +99,7 @@ h3 {
 #wrapper > main .välkommen {
   box-shadow: 0px 1px 5px #333333;
   background-color: rgba(255,255,255, 0.4);
+  width: 990px;
   height: 350px;
   border-radius: 5px;
 }
