--- a/Main/styles.css
+++ b/Main/styles.css
@@ -87,6 +87,14 @@ h3 {
   border-radius: 10px;
 }
 
+.hamburger-menu{
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  width: 38px;
+}
+
 #wrapper > main {
   grid-area: main;
   max-width: 990px;
@@ -224,5 +232,43 @@ h3 {
   text-transform: none;
   font-size: 14px;
   font-family: 'Exo 2', sans-serif;
+}
+
+@media screen and (max-width: 850px ) {
+  .hamburger-menu{
+    display: block;
+  }
+
+  #wrapper header h1{
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    z-index: 2;
+
+  }
+  #wrapper header .topnav {
+    top: 0;
+    left: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(8px);
+    width: 100%;
+    height: 400px;
+
+  }
+
+  #wrapper header .topnav a{
+    font-size: 16px;
+    width: 100%;
+    justify-content: center;
+    border-radius: 0;
+ 
+
+  }
+
 }
 
