--- a/Main/styles.css
+++ b/Main/styles.css
@@ -146,7 +146,7 @@ h3 {
   margin: 5px 0;
 }
 
-#wrapper > main .unicorn .unicorn-inläg {
+#wrapper > main .unicorn .unicornPost {
   background-color: rgba(255,255,255, 0.4);
   width: 480px ;
   height: 400px ;
@@ -157,11 +157,11 @@ h3 {
   display: none;
 }
 
-#wrapper .unicorn .unicorn-inläg:nth-child(-n+4) {
+#wrapper .unicorn .unicornPost:nth-child(-n+4) {
   display: inline;  
 }
 
-.unicorn-inläg > .unicorn-picture {
+.unicornPost > .unicorn-picture {
   margin: 3px;
   overflow: hidden;
   width: 260px;
@@ -172,27 +172,27 @@ h3 {
 
 }
 
-.unicorn-inläg > .unicorn-picture img {
+.unicornPost > .unicorn-picture img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
-.unicorn-inläg > .unicorn-heading {
+.unicornPost > .unicorn-heading {
   margin: 5px;
   padding: 5px;
   text-decoration: none;
 }
 
 
-.unicorn-inläg > .unicorn-description {
+.unicornPost > .unicorn-description {
   margin: 5px;
   padding: 5px;
   text-decoration: none;
   font-size: 12px;
 }
 
-.unicorn-inläg > .icons {
+.unicornPost > .icons {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -202,12 +202,12 @@ h3 {
   
 }
 
-.unicorn-inläg > .icons span {
+.unicornPost > .icons span {
   font-size: 12px;
   color: #777;
 }
 
-.unicorn-inläg > .icons span i{
+.unicornPost > .icons span i{
   color: #333333;
   padding-right: 5px;
 }
