--- a/Main/Searchunicorn/loader/loader.css
+++ b/Main/Searchunicorn/loader/loader.css
@@ -1,7 +1,7 @@
 .center{
     margin: 0;
     padding: 0;
-    background: rgb(0, 0, 0, .2);
+    background: rgb(0, 0, 0, .5);
     display: flex;
     text-align: center;
     justify-content: center;
@@ -52,7 +52,7 @@
 }
 
 .center span{
-    color: #f8f5e6;
+    color: #000000;
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 1px;
