--- a/Main/styles.css
+++ b/Main/styles.css
@@ -172,6 +172,13 @@ h3 {
 
 }
 
+.unicornPost:hover{
+  -webkit-box-shadow: 0px 0px 100px 0px rgb(255, 0, 153);
+  -moz-box-shadow: 0px 0px 100px 0px rgba(255, 0, 153,1);
+  box-shadow: 0px 0px 100px 0px rgba(255, 0, 153,1);
+  transition: .8s ease;
+  }
+
 .unicornPost > .unicorn-picture img {
   height: 100%;
   width: 100%;
