--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css
@@ -2,8 +2,11 @@
     box-shadow: 0px 1px 5px #333333;
     background-color: rgba(255,255,255, 0.4);
     min-height: 450px;
+    width: auto;
     border-radius: 5px;
     margin-bottom: 7px;
+    display: flex;
+    flex-direction: column;
       
 }
 
@@ -77,6 +80,24 @@
     border: none;
 }
 
+#wrapper .container .container-images{
+    margin-top: 5px;
+    padding: 3px;
+    border-top: 1px solid rgb(38 143 255);
+    height: 450px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    gap: 5px;
+
+}
+
+#wrapper .container .container-images img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: aqua;
+
+}
 
 
 
