--- a/Main/Searchunicorn/Searchunicorn.css
+++ b/Main/Searchunicorn/Searchunicorn.css
@@ -1,7 +1,7 @@
 #wrapper main .searchunicorn-form{
     display: grid;
     width: 400px;
-    height: 400px; 
+    height: 500px; 
     background-color: rgba(255,255,255, 0.4);
     border-radius: 5px;
     border: 1px solid rgb(38 143 255);
@@ -34,9 +34,9 @@
 }
 
 #map {
-    height: 400px;
+    height: 500px;
     width: 400px;
     border-radius: 5px;
     border: 1px solid rgb(38 143 255);
-    margin: 12px 5px;
+    margin: 5px;
 }
