--- a/Main/styles.css
+++ b/Main/styles.css
@@ -30,7 +30,6 @@ h1 {
   line-height: 19px;
   margin: 0 200px 0 22px;
   text-decoration: none;
-  font-family:'Signika Negative','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #333333;
   
 }
@@ -38,16 +37,23 @@ h1 {
 h2 {
   color: #f8f5e6;
   font-size: 70px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   padding-top: 60px;
   margin: 0 0 0 20px;
-  font-family: 'Signika Negative', 'Corinthia', cursive;
-  
 }
 
 h3 {
   font-size: 16px;
   color:#333333;
 
+}
+
+h4 {
+  font-size: 20px;
+} 
+
+#logo:hover {
+  cursor:pointer;
 }
 
 #wrapper {
@@ -84,7 +90,7 @@ h3 {
   padding: 8px 10px;
   text-decoration: none;
   text-align: center;
-  font-size: 12px;
+  font-size: 20px;
 }
 
 .social > ion-icon{
@@ -126,33 +132,25 @@ h3 {
 }
 
 #wrapper > main .välkommen p {
-  color: #f8f5e6;
+  color: #030303;
   margin: 10px 0 0 20px;
-  font-family: 'Corinthia', cursive;
-  font-size: 30px;
+  font-size: 23px;
 
 }
 
 #wrapper > main .välkommen button {
-  color: #f8f5e6;
-  background-color: #666;
-  text-decoration: none;
-  text-align: center;
-  margin: 30px 0 0 20px;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  cursor: pointer;
-  display: inline-block;
-  width: 35%;
-
+  margin-left: 435px;
+  width: 120px;
+  height: 80px;
+  text-align:center;
+  background: url("/Main/cloud-btn.svg");
+  background-size:contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #wrapper > main .välkommen button:hover {
-  background-color: #ddd;
-  color: black;
-  border-radius: 10px;
-
+  -webkit-transform: scale(1.2);
 }
 
 #wrapper > main .unicorn {
@@ -167,7 +165,7 @@ h3 {
   cursor: pointer;
   margin: 5px;
   float: left;
-  display: none;
+  display:none;
 }
 
 #wrapper .unicorn .unicornPost:nth-child(-n+4) {
@@ -210,12 +208,20 @@ img, svg {
   text-decoration: none;
 }
 
+.unicornPost > .unicorn-heading, h3 {
+  font-size: 20px;
+}
+
+.unicornPost > .unicorn-description, p {
+  font-size: 12px;
+  
+}
 
 .unicornPost > .unicorn-description {
   margin: 5px;
   padding: 5px;
   text-decoration: none;
-  font-size: 12px;
+
 }
 
 .unicornPost > .icons {
@@ -292,8 +298,6 @@ img, svg {
     width: 100%;
     justify-content: center;
     border-radius: 0;
- 
-
   }
 
 }
