--- a/Main/Spottedunicorn/Spottedunicorn.css
+++ b/Main/Spottedunicorn/Spottedunicorn.css
@@ -93,20 +93,18 @@
     margin: 0;
 }
 
-#wrapper main #load-more{
-    margin: 0 5px 10px 5px;
-    display:inline-block;
-    padding: 10px 30px;
-    border: 1px solid #334;
-    border-radius: 5px;
-    color: #334;
-    font-size: 16px;
-    background-color: #fff;
-    cursor: pointer;
+#wrapper > main #load-more{
+    margin-left: 435px;
+    width: 120px;
+    height: 80px;
+    text-align:center;
+    padding-top: 32px;
+    background: url("/Main/cloud-btn.svg");
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #wrapper main #load-more:hover{
-    background-color: rgb(38 143 255);
-    border-color: #333333;
-    color: #f8f5e6;
+    -webkit-transform: scale(1.2);
 }
