--- a/Main/styles.css
+++ b/Main/styles.css
@@ -143,6 +143,7 @@ h4 {
   width: 120px;
   height: 80px;
   text-align:center;
+  font-size: 18px;
   background: url("/Main/cloud-btn.svg");
   background-size:contain;
   background-repeat: no-repeat;
