--- a/Main/styles.css
+++ b/Main/styles.css
@@ -170,6 +170,7 @@ h4 {
 
 #wrapper > main .unicorn {
   margin: 5px 0;
+
 }
 
 #wrapper > main .unicorn .unicornPost {
@@ -181,20 +182,23 @@ h4 {
   margin: 5px;
   float: left;
   display:none;
+  overflow: hidden;
+
 }
 
 #wrapper .unicorn .unicornPost:nth-child(-n+4) {
-  display: inline;  
+  display: inline-block;  
 }
 
 .unicornPost > .unicorn-picture {
   margin: 3px;
   overflow: hidden;
-  width: 260px;
-  height: 190px;
+  width: 270px;
+  height: 210px;
   border-radius: 5px;
   display: block;
   float: right;
+  box-shadow: 0px 1px 5px rgb(38 143 255);
 
 }
 
@@ -206,12 +210,12 @@ h4 {
 }
 
 .unicornPost > .unicorn-picture img {
-  height: 100%;
+  height: 170px;
   width: 100%;
   object-fit: cover;
 }
 
-img, svg {
+#logo {
   padding: 20px;
   height: 120px;
   width: 400px;
@@ -228,34 +232,33 @@ img, svg {
 }
 
 .unicornPost > .unicorn-description, p {
-  font-size: 12px;
-  
+  font-size: 18px;
 }
 
 .unicornPost > .unicorn-description {
   margin: 5px;
   padding: 5px;
   text-decoration: none;
-
+  
 }
 
-.unicornPost > .icons {
+#wrapper main .unicorn .unicorn-picture > .icons {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 10px;
-  padding-top: 10px;
+  margin: 0 5px;
+  padding-top: 5px;
   border-top: 1px solid rgb(38 143 255);
   
 }
 
-.unicornPost > .icons span {
+.unicorn-picture > .icons span {
   font-size: 12px;
-  color: #777;
+  color: rgba(95, 21, 242);
 }
 
-.unicornPost > .icons span i{
-  color: #333333;
+.unicorn-picture > .icons span i{
+  color: rgba(28, 127, 238);
   padding-right: 5px;
 }
 
